--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@angular/router": "^7.0.4",
     "argon2": "^0.19.3",
     "argon2-ffi": "^1.1.0",
-    "autolinker": "^1.7.1",
+    "autolinker": "^1.8.1",
     "bldg25-chat": "file:../bldg25-chat-dev/bldg25-chat-2.3.1.tgz",
     "bldg25-chat-server": "file:../bldg25-chat-dev/bldg25-chat-server-2.3.1.tgz",
     "body-parser": "^1.17.2",
@@ -64,7 +64,7 @@
     "redis": "^2.8.0",
     "rxjs": "^6.3.3",
     "typescript": "^3.1.6",
-    "ws": "^6.1.1",
+    "ws": "^6.1.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -74,16 +74,16 @@
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
     "@types/form-data": "^2.2.1",
-    "@types/jasmine": "^2.8.11",
+    "@types/jasmine": "^3.3.0",
     "@types/jasminewd2": "^2.0.6",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/mongodb": "^3.1.14",
     "@types/node": "^10.12.9",
-    "@types/node-fetch": "^2.1.3",
+    "@types/node-fetch": "^2.1.4",
     "@types/redis": "^2.8.7",
     "@types/ws": "^6.0.1",
     "codelyzer": "^4.5.0",
-    "concurrently": "^4.0.1",
+    "concurrently": "^4.1.0",
     "coveralls": "^3.0.2",
     "jasmine": "^3.3.0",
     "jasmine-core": "^3.3.0",
@@ -92,7 +92,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "~1.1.0",
+    "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "node-fetch": "^2.3.0",
     "nodemon": "^1.18.6",
