--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "argon2": "^0.19.3",
     "argon2-ffi": "^1.1.0",
     "autolinker": "^1.8.1",
-    "bldg25-chat": "file:../bldg25-chat-dev/bldg25-chat-2.4.0.tgz",
-    "bldg25-chat-server": "file:../bldg25-chat-dev/bldg25-chat-server-2.4.0.tgz",
+    "bldg25-chat": "^2.4.0",
+    "bldg25-chat-server": "^2.4.0",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.1.3",
     "command-line-args": "^5.0.2",
